px4_ws/logs/px4_offboard/build.make.015.log.stderr
In file included from /home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/SLAM.cpp:2:0:
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/CtrlPx4.cpp: In constructor 'CtrlPx4::CtrlPx4()':
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/CtrlPx4.cpp:26:51: error: 'batCallback' is not a member of 'CtrlPx4'
   bat_sub_ = nh_.subscribe("/mavros/battery",100,&CtrlPx4::batCallback, this);
                                                   ^
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/CtrlPx4.cpp: At global scope:
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/CtrlPx4.cpp:132:63: error: no 'void CtrlPx4::batCallback(mavros_msgs::BatteryStatus)' member function declared in class 'CtrlPx4'
 void CtrlPx4::batCallback(const mavros_msgs::BatteryStatus bat)
                                                               ^
make[2]: *** [CMakeFiles/SLAM.dir/src/SLAM.cpp.o] Error 1
make[1]: *** [CMakeFiles/SLAM.dir/all] Error 2
make: *** [all] Error 2
